--- a/data-science.html
+++ b/data-science.html
@@ -87,11 +87,11 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aeratechnology/b41ce403-2a98-46b5-a81d-c5ea8015280c'>Aera Technology - Senior Data Scientist - Customer Facing</a></h5> 
+<h5><a href='https://jobs.lever.co/aeratechnology/b41ce403-2a98-46b5-a81d-c5ea8015280c'>Aera Technology - Senior Data Scientist - Customer Facing</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -135,7 +135,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/4pwtq1qrh71d6etpb4dyki77qh'>Data Scientist - Alternative Data | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/4pwtq1qrh71d6etpb4dyki77qh'>Data Scientist - Alternative Data | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -155,11 +155,11 @@
 <p><span class="badge badge-light">United States  Atlanta, GA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409032-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409032-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States  Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409196-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -183,7 +183,7 @@
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perpetualabs.com/c39b5cba-1831-428d-8f86-459678459ade'>Perpetua Labs - Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/perpetualabs.com/c39b5cba-1831-428d-8f86-459678459ade'>Perpetua Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -215,7 +215,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oqtlbfw9&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nDNzmMwC'>Benefitfocus Careers - Sr. Director, Data Science</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oqtlbfw9&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nDNzmMwC'>Benefitfocus Careers - Sr. Director, Data Science</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -231,7 +231,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324370/associate-data-scientist'>Associate Data Scientist | WorkNOLA</a></h5> 
+<h5><a href='https://worknola.com/job/324370/associate-data-scientist'>Associate Data Scientist | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -247,7 +247,7 @@ address?...</p>
 Cloud Computing, Graph Databases to solve challenging problems. This is a 
 paid?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hubhaus/7c4deec6-bb3d-4912-ae09-d54f7f245c0f'>HubHaus Inc - Data Scientist - Property Pricing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hubhaus/7c4deec6-bb3d-4912-ae09-d54f7f245c0f'>HubHaus Inc - Data Scientist - Property Pricing</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -306,11 +306,11 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">San Francisco  San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careers.unity.com/position/data-science-manager-monetization/1185960?gh_src=c5f46abb1'>Unity Careers - Data Science Manager, Monetization @ San Francisco</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.unity.com/position/data-science-manager-monetization/1185960?gh_src=c5f46abb1'>Unity Careers - Data Science Manager, Monetization @ San Francisco</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -429,11 +429,11 @@ to generate a unique referral link and receive credit for anyone who applies?...
 <p>Oct 13, 2019 ... Apply to Data Scientist (Financial Services) at Fractal Analytics in San Francisco, 
 CA.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1776021?gh_src=d1949a901'>Job Application for Data Scientist at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1776021?gh_src=d1949a901'>Job Application for Data Scientist at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/jdcom/jobs/4495588002'>Job Application for Data Scientist - Business Growth at JD.com</a></h5> 
+<h5><a href='https://boards.greenhouse.io/jdcom/jobs/4495588002'>Job Application for Data Scientist - Business Growth at JD.com</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
